; ModuleID = '/home/carl/AnghaBench/RetroArch/network/netplay/extr_netplay_handshake.c_simple_rand_uint32.c'
source_filename = "/home/carl/AnghaBench/RetroArch/network/netplay/extr_netplay_handshake.c_simple_rand_uint32.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 ()* @simple_rand_uint32 to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @simple_rand_uint32() #0 {
  %1 = alloca [3 x i32], align 4
  %2 = call i32 (...) @simple_rand()
  %3 = getelementptr inbounds [3 x i32], [3 x i32]* %1, i64 0, i64 0
  store i32 %2, i32* %3, align 4
  %4 = call i32 (...) @simple_rand()
  %5 = getelementptr inbounds [3 x i32], [3 x i32]* %1, i64 0, i64 1
  store i32 %4, i32* %5, align 4
  %6 = call i32 (...) @simple_rand()
  %7 = getelementptr inbounds [3 x i32], [3 x i32]* %1, i64 0, i64 2
  store i32 %6, i32* %7, align 4
  %8 = getelementptr inbounds [3 x i32], [3 x i32]* %1, i64 0, i64 0
  %9 = load i32, i32* %8, align 4
  %10 = shl i32 %9, 30
  %11 = getelementptr inbounds [3 x i32], [3 x i32]* %1, i64 0, i64 1
  %12 = load i32, i32* %11, align 4
  %13 = shl i32 %12, 15
  %14 = add nsw i32 %10, %13
  %15 = getelementptr inbounds [3 x i32], [3 x i32]* %1, i64 0, i64 2
  %16 = load i32, i32* %15, align 4
  %17 = add nsw i32 %14, %16
  ret i32 %17
}

declare dso_local i32 @simple_rand(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
